In test code, allow any 100% data pack to provide fallbacks.

A test is allowed to request a 200% resource and fallback to a 100%
resource. Currently only the last-added 100% data pack provides
fallbacks, which may only be a small supplement.

Instead, scan through all 100% data packs. But only when
InitSharedInstanceWithPakPath() has invoked
ResourceBundle::LoadTestResources().

BUG=636995

Review-Url: https://codereview.chromium.org/2406763002
Cr-Commit-Position: refs/heads/master@{#427272}

Former-commit-id: 16fe440227ce9e085117faa4c4b7af197de88602